--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@remix-run/eslint-config": "^1.16.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
   "engines": {
