--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.12.3",
     "@remix-run/css-bundle": "^1.16.0",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
@@ -15,6 +18,7 @@
     "ahooks": "^3.7.7",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "daisyui": "^2.51.6",
     "dayjs": "^1.11.7",
     "isbot": "^3.6.8",
     "js-cookie": "^3.0.5",
