--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
+    "@prisma/client": "^4.14.0",
     "@remix-run/css-bundle": "^1.16.0",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
