--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "remix-serve build",
     "typecheck": "tsc"
   },
+  "prisma": {
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "5.0.0-alpha.130",
     "@mui/material": "^5.12.3",
     "@prisma/client": "^4.14.0",
+    "@react-three/drei": "^9.68.3",
+    "@react-three/fiber": "^8.13.0",
     "@remix-run/css-bundle": "^1.16.0",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
@@ -22,12 +28,16 @@
     "crypto-js": "^4.1.1",
     "daisyui": "^2.51.6",
     "dayjs": "^1.11.7",
+    "framer-motion": "^10.12.12",
     "isbot": "^3.6.8",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "remix-three": "^0.0.1",
+    "three": "^0.152.2",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
